# htsget_server/swagger.yaml
@@ -9,19 +9,19 @@ consumes:
 produces:
   - application/json
 paths:
-  /reads:
+  /reads/{id}:
     get:
       operationId: "operations.get_reads"
       summary: "Retrieve desired URIs in a variant format given an ID"
       parameters:
         - name: id
-          in: query
+          in: path
           required: true
           type: string
           x-example: "HG02102"
-        - name: reference_name
+        - name: referenceName
           in: query
-          type: integer
+          type: string
           required: false
           x-example: 21
         - name: start
@@ -70,19 +70,19 @@ paths:
               type:
                 type: string
 
-  /variants:
+  /variants/{id}:
     get:
       operationId: "operations.get_variants"
       summary: "Retrieve desired URIs in a variant format given an ID"
       parameters:
         - name: id
-          in: query
+          in: path
           required: true
           type: string
           x-example: "HG02102"
-        - name: reference_name
+        - name: referenceName
           in: query
-          type: integer
+          type: string
           required: false
           x-example: 21
         - name: start
